Update to DCAT-AP VL 2.0 (#39)
* Update to DCAT-AP VL 2.0

* Renamed Datasetcatalogus

* Validates with VSDS DCAT aggregator

---------
